--- a/pom.xml
+++ b/pom.xml
@@ -20,22 +20,24 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>microprofile-conference</artifactId>
-        <groupId>io.microprofile.showcase</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
-    <artifactId>demo-bootstrap</artifactId>
+    <groupId>sample.microservicebuilder</groupId>
+    <version>1.0.0</version>
+    <artifactId>bootstrap</artifactId>
     <name>Conference :: Bootstrap Data</name>
 
     <packaging>jar</packaging>
+
+    <properties>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -44,6 +46,12 @@
             <artifactId>javax.json</artifactId>
             <version>1.0.4</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
         </dependency>
 
     </dependencies>
